--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -124,38 +124,40 @@
         android:layout_height="40dp"
         android:rowCount="1"
         android:layout_alignTop="@id/tvOrSignIn"
-        android:layout_marginStart="40sp"
         android:columnCount="3"
-        android:layout_marginTop="40sp"
-        android:paddingStart ="20sp">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40sp">
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
             android:layout_height="40dp"
             android:elevation="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_gravity="center"
             app:cardCornerRadius="40sp"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1">
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:elevation="0dp"
+                    android:layout_marginStart="20dp"
                     android:layout_weight="1"
                     android:src="@drawable/img"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Google"
+                    android:layout_marginStart="60dp"
                     android:layout_gravity="center"
                     android:textColor="#271842"/>
-            </LinearLayout>
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
@@ -163,26 +165,27 @@
             android:elevation="10dp"
             app:cardCornerRadius="40dp"
             android:layout_row="0"
+            android:layout_gravity="center"
             android:layout_column="2"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1">
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp">
                 <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:src="@drawable/img_1"
-                    android:elevation="0dp"
-                    android:layout_weight="1"/>
+                    android:layout_marginStart="20dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Facebook"
+                    android:layout_marginStart="60dp"
                     android:layout_gravity="center"
                     android:textColor="#271842"/>
-            </LinearLayout>
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </GridLayout>
 </RelativeLayout>
